--- a/mosaic_engine/engine_resources.qrc
+++ b/mosaic_engine/engine_resources.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/shaders">
         <file>fshader.glsl</file>
         <file>vshader.glsl</file>
+        <file>vshader_outline.glsl</file>
+        <file>fshader_outline.glsl</file>
     </qresource>
 </RCC>
