--- a/mosaic_app/qml.qrc
+++ b/mosaic_app/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>MosaicFlippable.qml</file>
+        <file>JPEGFileChooser.qml</file>
     </qresource>
 </RCC>
