Make UI into two pages.

--- a/mosaic_app/qml.qrc
+++ b/mosaic_app/qml.qrc
@@ -3,5 +3,7 @@
         <file>main.qml</file>
         <file>MosaicFlippable.qml</file>
         <file>JPEGFileChooser.qml</file>
+        <file>InputSelection.qml</file>
+        <file>MosaicMonitor.qml</file>
     </qresource>
 </RCC>
