Add skeleton for textured quad shader.

--- a/mosaic_engine/engine_resources.qrc
+++ b/mosaic_engine/engine_resources.qrc
@@ -4,5 +4,7 @@
         <file>vshader.glsl</file>
         <file>vshader_outline.glsl</file>
         <file>fshader_outline.glsl</file>
+        <file>vshader_target_image.glsl</file>
+        <file>fshader_target_image.glsl</file>
     </qresource>
 </RCC>
