Fix Gaussian blur tests.
We have round-off problems at the one bit level per color channel
per pixel. For constant images this leads to correspondingly
large average l2 errors.

--- a/tests/imageutility_test/testimages.qrc
+++ b/tests/imageutility_test/testimages.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/testimages">
-        <file>gaussianBlur0.JPG</file>
+        <file>GaussianBlurOfAnImage_input.png</file>
     </qresource>
 </RCC>
